tests/invalid/ListGenerator_Invalid_3.whiley
function f(bool n) -> int[]:
    return [0; n]
